# sysmon

./: .env.example  .gitignore  Cargo.toml  README.md  ROADMAP.md  pubspec.yaml  start.sh
.claude/: settings.local.json
.github/workflows/: ci.yaml
backend/: main.py  requirements.txt
example/: sysmon_example.dart
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/models/: metrics_models.dart  overview_layout.dart
flutter_app/lib/providers/: history_provider.dart  metrics_provider.dart  overview_layout_provider.dart  websocket_provider.dart
flutter_app/lib/screens/: dashboard_screen.dart
flutter_app/lib/theme/: app_colors.dart
flutter_app/lib/widgets/: cpu_chart.dart  kpi_card.dart  memory_card.dart  sidebar.dart  status_indicator.dart
flutter_app/test/: dashboard_layout_test.dart  metrics_models_test.dart  overview_layout_provider_test.dart  widget_test.dart
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/screens/: loading_screen.dart  login_screen.dart
frontend/lib/services/: metrics_service.dart
frontend/lib/theme/: app_theme.dart
frontend/lib/widgets/: cpu_chart.dart  (+2 more)
frontend/test/: widget_test.dart
lib/: sysmon.dart
src/: collectors.rs  config.rs  lib.rs  logging.rs  main.rs  models.rs  prometheus.rs  server.rs
src/collectors/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  services.rs
test/: config_test.dart  cpu_collector_test.dart  http_handler_test.dart  logger_test.dart  mem_collector_test.dart  metrics_snapshot_test.dart  prometheus_formatter_test.dart  sysmon_test.dart
(+17 files in other folders)
