[package]
name = "sysmon-rs"
version = "0.1.0"
edition = "2024"
default-run = "sysmon-rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "http1", "json"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
